--- a/src/App.css
+++ b/src/App.css
@@ -19,54 +19,12 @@ a:hover, li:hover{
     color : white;
 }
 
-nav{
-    background-color: #252627;
-}
-
 a{
     color : #a9a9b3;
     text-decoration: none;
 }
 
-i{
-    font-size: 24px;
-}
-
-#menu{
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    min-height: 6vh;
-}
-
-#menu li {
-    list-style: none;
-    font-size: 20px;
-}
-
-#cv{
-    display: flex;
-    justify-content: center;
-    margin-top: 2rem;
-    margin-bottom: 2rem;
-}
-
-#imgcv{
-    width:95%;
-    border: 3px solid #a9a9b3;
-}
-
-#apropos p{
-    max-width: 65ch;
-    line-height: 1.5rem;
-    letter-spacing: 0.5px;
-}
-
-#apropos{
-    display: flex;
-    justify-content: center;
-    margin: 1rem;
-}
+/* Page Home */
 
 #icons{
     display: flex;
@@ -100,6 +58,64 @@ i{
     flex-direction: column;
     align-items: center;
 }
+
+i{
+    font-size: 24px;
+}
+
+/* Navbar */
+
+nav{
+    background-color: #252627;
+}
+
+#menu{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    min-height: 6vh;
+}
+
+#menu li {
+    list-style: none;
+    font-size: 20px;
+}
+
+/* Page A propos */
+
+#apropos p{
+    max-width: 65ch;
+    line-height: 1.5rem;
+    letter-spacing: 0.5px;
+    font-weight: 400;
+}
+
+#apropos{
+    display: flex;
+    justify-content: center;
+    margin: 1rem;
+}
+
+span{
+    font-weight: 900;
+    font-size: 17px;
+}
+
+/* Page CV */
+
+#cv{
+    display: flex;
+    justify-content: center;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+}
+
+#imgcv{
+    width:95%;
+    border: 3px solid #a9a9b3;
+}
+
+/* Page Projets */
 
 .projetCard:hover{
     box-shadow: 0px 0px 1rem #a9a9b3;
@@ -136,13 +152,7 @@ i{
     margin-bottom : 1rem;
 }
 
-@media screen and (min-width: 450px){
-    #menu{
-        justify-content: flex-start;
-        gap : 3rem;
-        margin-left: 2rem;
-    }
-}
+/* Variations format display */
 
 @media screen and (orientation: landscape){
     #imgcv{
@@ -150,5 +160,10 @@ i{
     }
     #apropos{
         margin-top: 7vh;
+    }
+    #menu{
+        justify-content: flex-start;
+        gap : 3rem;
+        margin-left: 2rem;
     }
 }
