--- a/src/App.css
+++ b/src/App.css
@@ -137,7 +137,7 @@ span {
   font-weight: 800;
 }
 
-/* Page CodewarsStats */
+/* Composant CodewarsStats */
 
 .imgcw {
   width: 50px;
@@ -171,10 +171,17 @@ span {
 }
 
 .allProjetCard {
-  padding: 2rem;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
   display: grid;
   gap: 2rem;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(340px, 1fr));
+}
+
+.imgProject {
+  border-bottom: #a9a9b3 solid 2px;
 }
 
 .projetCard {
@@ -209,6 +216,11 @@ span {
 /* Variations format display */
 
 @media screen and (orientation: landscape) {
+  .allProjetCard {
+    padding-left: 4rem;
+    padding-right: 4rem;
+  }
+
   #imgcv {
     width: 50%;
   }
