--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: 'jose';
+  font-family: "jose";
   src: url(./assets/fonts/JosefinSans-VariableFont_wght.ttf);
 }
 
@@ -12,7 +12,7 @@ body {
   background-color: #292a2d;
   color: #a9a9b3;
   font-size: 16px;
-  font-family: 'jose';
+  font-family: "jose";
 }
 
 a:hover,
@@ -133,7 +133,7 @@ span {
   border: none;
   color: #252627;
   cursor: pointer;
-  font-family: 'jose';
+  font-family: "jose";
   font-weight: 800;
 }
 
